# GameSdk-KTX

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew.bat  keystore.properties  settings.gradle
demo-ktx/: build.gradle
library_base/: build.gradle  (+2 more)
library_core/: CMakeLists.txt  build.gradle  proguard-rules.pro  upload.gradle
library_core/src/androidTest/java/cn/flyfun/gamesdk/core/: ExampleInstrumentedTest.kt
library_core/src/main/: AndroidManifest.xml
library_core/src/main/cpp/: aes_utils.cpp  flyfun_boost.cpp  jsoncpp.cpp  jtools.cpp  logger.cpp  params_map.cpp  rsa_utils.cpp  url_utils.cpp
library_core/src/main/cpp/include/: aes_utils.h  common.h  constant.h  json.h  jtools.cpp  jtools.h  logger.cpp  logger.h  params_map.cpp  params_map.h  rsa_utils.h  url_utils.h
library_core/src/main/cpp/include/bean/: common.h
library_core/src/main/cpp/include/encryption/: base64.cpp  base64.h  url_utils.cpp  url_utils.h
library_core/src/main/cpp/include/encryption/aes/: aes_utils.cpp  aes_utils.h
library_core/src/main/cpp/include/encryption/rsa/: rsa_utils.cpp  rsa_utils.h
library_core/src/main/cpp/include/json/: json-forwards.h  json.h  jsoncpp.cpp
library_core/src/main/java/cn/flyfun/gamesdk/: Version.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/: SdkBridge.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/apm/: EventTraceImpl.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/entity/: ClickType.kt  FileEntity.kt  GameRewardInfo.kt  LoginType.kt  N2JType.kt  ResultInfo.kt  SdkBackLoginInfo.kt  Session.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/entity/bean/: InitBean.kt  LogBean.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/fama/: EventSubject.kt  EventTraceImpl.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/fama/channel/adjust/: AdjustEventBean.kt  AdjustImpl.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/fama/channel/firebase/: FirebaseImpl.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/impl/: BindActivity.kt  ChargeImpl.kt  HybridActivity.kt  PreRewardImpl.kt  SdkBridgeImpl.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/impl/login/: LoginActivity.kt  LoginFragmentPagerAdapter.kt  SignInImpl.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/impl/login/fragment/: ChooseFragment.kt  RegisterFragment.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/inter/: IEventTrace.kt  IFileRequestCallback.kt  IRequestCallback.kt  ImplCallback.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/internal/: IEventObserver.kt  IEventTrace.kt  IFileRequestCallback.kt  IRequestCallback.kt  ImplCallback.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/network/: FileRequest.kt  Host.kt  MultipartRequest.kt  ParamsMap.kt  SdkJsImpl.kt  SdkRequest.kt  VolleyRequest.kt  VolleySingleton.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/ui/: DialogUtils.kt  EventEditText.kt  VerifyCodeEditText.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/ui/dialog/: DotLoadingDialog.kt  DotLoadingView.kt  InitDialog.kt  PrivacyDialog.kt  ScaleLoadingDialog.kt  TipsDialog.kt
library_core/src/main/java/cn/flyfun/gamesdk/core/utils/: AndroidBug5497Workaround.kt  FileUtils.kt  NTools.kt  SPUtils.kt  SessionUtils.kt  TimeDownUtils.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/: SdkBridge.kt  Version.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/apm/: EventTraceImpl.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/entity/: ClickType.kt  LoginType.kt  ResultInfo.kt  SdkBackLoginInfo.kt  Session.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/impl/: BindActivity.kt  ChargeImpl.kt  HybridActivity.kt  SdkBridgeImpl.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/inter/: IEventTrace.kt  IRequestCallback.kt  ImplCallback.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/network/: FuseWebActivity.java  Host.kt  HybridActivity.kt  ParamsMap.kt  SdkJsImpl.kt  SdkRequest.kt  VolleyRequest.kt  VolleySingleton.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/ui/: DialogUtils.kt  EventEditText.java  EventEditText.kt  VerifyCodeEditText.java  VerifyCodeEditText.kt
library_core/src/main/java/cn/flyfun/ktx/gamesdk/core/utils/: AndroidBug5497Workaround.java  AndroidBug5497Workaround.kt  FileUtils.java  FileUtils.kt  SPUtils.kt  SessionUtils.java  SessionUtils.kt  TimeDownUtils.java  TimeDownUtils.kt
library_core/src/main/res/drawable/: ffg_account_list_bg.xml  ffg_btn_gray_bg.xml  ffg_btn_red_bg.xml  ffg_btn_white_bg.xml  ffg_et_frame_focused_bg.xml  ffg_et_frame_normal_bg.xml  ffg_et_frame_selector_bg.xml  ffg_notice_content_bg.xml  ffg_notice_dialog_content_bg.xml  ffg_notice_dialog_foot_bg.xml  ffg_notice_dialog_head_bg.xml  ffg_notice_title_bg.xml  ffg_panel_content_bg.xml  ffg_panel_title_bg.xml  ffg_tab_left_select.xml  ffg_tab_left_selected.xml  ffg_tab_right_select.xml  ffg_tab_right_selected.xml  ffg_theme_color.xml  ffg_tips_content_bg.xml  ffg_web_view_border.xml  ffg_webview_frame.xml
library_core/src/main/res/layout/: ffg_account_list_item.xml  ffg_bind.xml  ffg_dialog_dot_loading.xml  ffg_dialog_scale_loading.xml  ffg_dialog_tips.xml  ffg_event_edittext.xml  ffg_hybrid.xml  ffg_init_dialog.xml  ffg_login.xml  ffg_login_choose.xml  ffg_login_forget.xml  ffg_login_register.xml  ffg_notice_dialog.xml  ffg_privacy_dialog.xml  ffg_verify_code_edittext.xml
library_core/src/main/res/layout-land/: ffg_bind.xml  ffg_login.xml
library_core/src/main/res/layout-sw480dp/: ffg_bind.xml  ffg_init_dialog.xml  ffg_login.xml  ffg_privacy_dialog.xml
library_core/src/main/res/layout-sw480dp-land/: ffg_bind.xml  ffg_login.xml
library_core/src/main/res/layout-sw600dp/: ffg_bind.xml
library_core/src/main/res/layout-sw600dp-land/: ffg_bind.xml  ffg_login.xml
library_core/src/main/res/values/: ffg_colors.xml  ffg_strings.xml  ffg_styles.xml
library_core/src/main/res/values-en/: ffg_strings.xml
library_core/src/main/res/values-zh/: ffg_strings.xml
library_core/src/test/java/cn/flyfun/gamesdk/core/: ExampleUnitTest.kt
(+54 files in other folders)
